2018-12-18  Kirit Saelensminde  <kirit@felspar.com>
 Changes to string handling to support wider adoption of `f5::u8string`

2018-12-01  Kirit Saelensminde  <kirit@felspar.com>
 Support EdDSA JWTs.

2018-11-08  Kirit Saelensminde  <kirit@felspar.com>
 JWT secrets can now be looked up via a function passed to the load function.

2018-10-28  Kirit Saelensminde  <kirit@felspar.com>
 Add iterator traits to JSON iterator.

2018-10-07  Kirit Saelensminde  <kirit@felspar.com>
 Tidy up some headers.

2018-10-02  Kirit Saelensminde  <kirit@felspar.com>
 Do less work when stringifying JSON.

2018-09-28  Kirit Saelensminde  <kirit@felspar.com>
 Refactor the integral to integral coercions to remove a lot of complex template meta-programming.

2018-08-31  Kirit Saelensminde  <kirit@felspar.com>
 Add a way to get a JSON pointer URL fragment string for a `jcursor`.

2018-08-16  Kirit Saelensminde  <kirit@felspar.com>
 Add a parser for JSON pointers.

2018-08-15  Kirit Saelensminde  <kirit@felspar.com>
 `fostlib::json::apply_visitor` can now take any number of lambda like expressions.

2018-08-11  Kirit Saelensminde  <kirit@felspar.com>
 An empty `jcursor` needs to be represented as an empty array in JSON.

2018-08-10  Kirit Saelensminde  <kirit@felspar.com>
 Add an `object` and `array` member to `json` to make access and iteration simpler.

2018-08-09  Kirit Saelensminde  <kirit@felspar.com>
 * Add direct comparison between JSON and u8view.
 * Add iteration over the command line arguments passed to `fostlib::arguments`.

2018-07-15  Kirit Saelensminde  <kirit@felspar.com>
 Remove `info` member from exception and change `throw` to `noexcept`.

2018-07-13  Kirit Saelensminde  <kirit@felspar.com>
 * Remove `fostlib::variant` as it's not used.
 * Switch `fostlib::json` to use `std::variant`.
 * Remove memoize, as it's never been used.

2018-07-12  Kirit Saelensminde  <kirit@felspar.com>