@@ -1,4 +1,7 @@
 2018-12-18  Kirit Saelensminde  <kirit@felspar.com>
+ Split the CMake configuraion into smaller parts.
+
+2018-12-18  Kirit Saelensminde  <kirit@felspar.com>
  Changes to string handling to support wider adoption of `f5::u8string`
 
 2018-12-01  Kirit Saelensminde  <kirit@felspar.com>
